Navigation changes, fix the .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,6 @@ Gemfile.lock
 webmocks/alt_design2/*.swp
 *.swp
 models/*.swp
-# rawrmage - ignore server output
+# rawrmage - ignore server output and stuff
+nohup.out
+xlogfile
