Display icons for trophies user earned on user home page. Link trophies to user. Add nethack 1.3d server info

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ webmocks/alt_design2/*.swp
 *.swp
 models/*.swp
 # rawrmage - ignore server output and stuff
-junethack2.db
+*.db
+*.bak
 nohup.out
 xlogfile
