--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ test_xlog2.txt
 Gemfile.lock
 # cheryl - ignore temporary files
 webmocks/alt_design2/*.swp
+webmocks/alt_design2/*.tmp
 *.swp
 models/*.swp
 # rawrmage - ignore server output and stuff
